--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,6 @@
-
+    <footer>
+    <p>Author: Lokesh20018 </p>
+    <p><a href="mailto:lokesh20018@gmail.com">Mail</a></p>
+  </footer> 
     </body>
 </html>
