--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,15 @@
         </title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
         <link rel="stylesheet" href="/stylesheets/app.css">
+
+        <style>
+            footer {
+              text-align: center;
+              padding: 3px;
+              background-color: rgb(114, 114, 114);
+              color: white;
+            }
+            </style>
     </head>
     <body>
         <div class = "ui fixed inverted menu">
