--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
             footer {
               text-align: center;
               padding: 3px;
-              background-color: rgb(114, 114, 114);
-              color: white;
+              font-size: 10px ;
+              color: rgb(99, 99, 99);
             }
             </style>
     </head>
