--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
     <footer>
     <p>Author: Lokesh20018 </p>
-    <p><a href="mailto:lokesh20018@gmail.com">Mail</a></p>
+    <a href="mailto:lokesh20018@gmail.com">Mail</a>
   </footer> 
     </body>
 </html>
