--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,10 +14,12 @@
                 <p><%- blog.body %></p>
             </div>
             <br>
-            <a class="ui basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
-            <form id="DELETE" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
+            <!-- <a class="ui basic button" href="/blogs/<%= blog._id %>/edit">Edit</a> -->
+            <!-- <form id="DELETE" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST"> -->
+            <!-- <button class="ui red basic button">Delete</button> -->
+            
                 
-                <button class="ui red basic button">Delete</button>
+                
             </form>
         </div>
     </div>  
