--- a/views/new.ejs
+++ b/views/new.ejs
@@ -14,6 +14,10 @@
             <label>Body of the post</label>
             <textarea name="blog[body]" id="" cols="30" rows="5"></textarea>
         </div>
+        <div clsss="field"> 
+            <label> Author </label>
+            <input type="text" name="blog[author]" placeholder="Author">
+        </div>
         <button class="ui big black button">Submit</button>
         
           
