--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,9 @@
                         <div class="description">
                             <p><%- blog.body.substring(1,100) %>...</p>
                         </div>
+                        <div class="description">
+                            <p><%- blog.author %></p>
+                        </div>
                         <br>
                         <a class="ui floated basic black button" href="/blogs/<%= blog._id %>">Read more</a>
     
