delete and edit method

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,10 +14,10 @@
                 <p><%- blog.body %></p>
             </div>
             <br>
-            <!-- <a class="ui basic button" href="/blogs/<%= blog._id %>/edit">Edit</a> -->
-            <!-- <form id="DELETE" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST"> -->
-            <!-- <button class="ui red basic button">Delete</button> -->
-            
+            <a class="ui basic button" href="/blogs/<%= blog._id %>/edit">Edit</a> 
+            <form id="DELETE" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST"> 
+            <button class="ui red basic button">Delete</button> 
+        
                 
                 
             </form>
