Revert "repo link updated"
This reverts commit c86a860f7edb3d506105085ad945abd5d15bf076.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
     <footer>
     <p>Author: Lokesh20018 </p>
-    <a href="mailto:lokesh20018@gmail.com">Mail</a> | <a href="https://github.com/lokesh20018/BlogApp"> GitHub repo </a>
+    <a href="mailto:lokesh20018@gmail.com">Mail</a> | <a href="https://github.com/lokesh20018/BlogApp"> repo </a>
   </footer> 
     </body>
 </html>
