--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,9 +21,7 @@
                         
                         <div class="description">
                             <p><%- blog.body.substring(1,100) %>...</p>
-                        </div>
-                        <div class="description">
-                            <p><%- blog.author %></p>
+                            <p> <b>- <%- blog.author %> </b> </p>
                         </div>
                         <br>
                         <a class="ui floated basic black button" href="/blogs/<%= blog._id %>">Read more</a>
