--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,6 +14,10 @@
             <label>Body of the post</label>
             <textarea name="blog[body]" id="" cols="30" rows="5"   > <%= blog.body %> </textarea>
         </div>
+        <div class="field">
+            <label>Author</label>
+            <input type="text" name="blog[author]" value=<%= blog.author %>>
+        </div>
         
         <button class="ui big black button">Submit</button>
         
