--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,8 +19,11 @@
     <body>
         <div class = "ui fixed inverted menu">
             <div class="ui container">
-                <div class="header item"> <i class="code icon"></i>Blog Site</div>
+                
                 <a href="/" class="item">Home</a>
                 <a href="/blogs/new" class="item">New Post</a>
+                <div class="header item" "> <i class="code icon"></i>Blog Site</div>
+                <a href="/register" class="item" >Sign Up</a>
+                <a href="/login" class="item" >Log in</a>
             </div>
         </div>
