--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,12 +5,12 @@
         <div class="field">
             <label>User ID</label>
             
-            <input type="text" name = "username">
+            <input type="text" name = "username" required>
         </div>
         <div class="field">
             <label>Password</label>
             
-            <input type="password" name = "password">
+            <input type="password" name = "password" required>
         </div>
         
         
