--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,13 +11,14 @@
             </div>
             <br>
             <div class="description" >
-                <p><%- blog.body %></p>
+                <p><%= blog.body %></p>
             </div>
             <br>
             <div class="description" >
-                <p> - <b><%- blog.author %> </b></p>
+                <p> <%= blog.author.username  %> </p>
             </div>
             <br>
+            
              <a class="ui basic button" href="/blogs/<%= blog._id %>/edit">Edit</a> 
              <form id="DELETE" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST"> 
              <button class="ui red basic button">Delete</button> 
