--- a/views/ar.ejs
+++ b/views/ar.ejs
@@ -1,13 +1,17 @@
 <%- include("partials/header") %>
-
 <div class="ui main text container segment">
     <div class="ui huge header">Sign UP</div>
-    <p>User already registered with this name choose another name...</p>
+    <p>User name already exists, try another User ID</p>
     <form action="/register" method="post" class="ui form">
         <div class="field">
             <label>User ID</label>
             
-            <input type="text" name = "username">
+            <input type="text" name = "username" required>
+        </div>
+        <div class="field">
+            <label>Email ID</label>
+            
+            <input type="email" name = "email" required>
         </div>
         <div class="field">
             <label>Password</label>
@@ -16,7 +20,7 @@
         </div>
         
         
-        <button class="ui big black button">SignUP</button>
+        <button class="ui big black button">Sign Up</button>
         
             
     </form>
