--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,12 @@
         <div class="field">
             <label>User ID</label>
             
-            <input type="text" name = "username">
+            <input type="text" name = "username" required>
+        </div>
+        <div class="field">
+            <label>Email ID</label>
+            
+            <input type="email" name = "email" required>
         </div>
         <div class="field">
             <label>Password</label>
